--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@
  * limitations under the License.
  */
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 34
@@ -49,4 +50,13 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    api('com.google.android.material:material:1.11.0')
+    implementation 'com.google.firebase:firebase-auth:22.3.0'
+    implementation 'com.google.firebase:firebase-database:20.3.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
+    implementation 'com.google.android.material:material:1.4.0'
+
+
 }
